Clean up site structure.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,9 @@
       <small>
         Theme: <a href="https://github.com/johnotander/pixyll.git">pixyll</a>.
       </small>
+      <small>
+        &copy; NUS Hackers
+      </small>
     </div>
   </div>
 </footer>
