--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="post-header mb2">
   <h1 class="py2">{{ page.title }}</h1>
-  <span class="post-meta">{{ page.date | date: "%b %-d, %Y" }} &middot; {{ page.author }}</span>
+  <span class="post-meta">{{ page.date | date: "%b %-d, %Y" }} &middot; <a href="https://github.com/{{ page.author }}">{{ page.author }}</a></span>
 </div>
 
 <article class="post-content">
